Update contact form

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
             </a>
           </p>
         </div>
-        <form id="contact-form" class="contact-form" novalidate>
+        <form   action="https://formspree.io/f/xvgbwkww"
+        method="POST" class="contact-form" novalidate>
           <label for="name">Name</label>
           <input type="text" id="name" name="name" placeholder="Your name" required />
 
